--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,32 @@
-{% block content %}
-<div class="intro">
-    <p>Tes MBTI untuk pekerjaan informatika - v 0.1</p>
-    <a href="{{ url_for('test') }}" class="btn">Begin Test</a>
-</div>
-{% endblock %}
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Bayesian MBTI Test</title>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    </head>
+    <body>
+        <div class="container mt-5">
+            <header>
+                <h1>Bayesian MBTI Personality Test</h1>
+            </header>
+            <main>
+                <div class="card p-4">
+                    <h4 class="fw-bold">Tes MBTI untuk pekerjaan informatika - v 0.1</h4>
+                    <form action="{{ url_for('test') }}" method="get">
+                        <label>Name:</label>
+                        <br>
+                        <input type="text" name="name" class="w-100 p-2 m-1" required>
+                        <br>
+                        <label>Email:</label>
+                        <br>
+                        <input type="email" name="email" class="w-100 p-2 m-1" required>
+                        <br>
+                        <input type='submit' class="btn btn-primary  m-1 mb-0 mt-2 w-100" value="Begin Test">
+                    </form>
+                </div>
+            </main>
+        </div>
+    </body>
+</html>
