--- a/templates/results.html
+++ b/templates/results.html
@@ -1,131 +1,142 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>MBTI Test Results</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-</head>
-<body>
-    <div class="container mt-5">
-        <div class="row justify-content-center">
-            <div class="col-md-8">
-                <div class="card">
-                    <div class="card-header bg-success text-white">
-                        <h2 class="text-center">Your MBTI Personality Type</h2>
-                    </div>
-                    <div class="card-body">
-                        <div class="text-center mb-4">
-                            <h1 class="display-1">{{ personality_type }}</h1>
-                            <p class="lead">Confidence: {{ confidence }}%</p>
+    <head>
+        <title>MBTI Test Results</title>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    </head>
+    <body>
+        <div class="container mt-5">
+            <div class="row justify-content-center">
+                <div class="col-md-8">
+                    <div class="card">
+                        <div class="card-header bg-success text-white">
+                            <h2 class="text-center"> {{ user_name }} MBTI Personality Type </h2>
                         </div>
-                        
-                        <h4>Description:</h4>
-                        <p class="mb-4">{{ description }}</p>
-                        
-                        <h4>Dimensional Breakdown:</h4>
-                        <div class="row mb-4">
-                            <div class="col-md-6">
-                                <div class="card mb-3">
-                                    <div class="card-body">
-                                        <h5>Extraversion (E) vs. Introversion (I)</h5>
-                                        <div class="progress">
-                                            <div class="progress-bar bg-primary" role="progressbar" 
-                                                 style="width: {{ dimensions.E }}%" 
-                                                 aria-valuenow="{{ dimensions.E }}" 
-                                                 aria-valuemin="0" aria-valuemax="100">
-                                                E: {{ dimensions.E }}%
+                        <div class="card-body">
+                            <div class="text-center mb-4">
+                                <p class="sublead mb-0 pb-0 text-secondary">email : <a href="mailto:{{ user_email }}">{{ user_email }}</a></p>
+                                <h1 class="display-1">{{ personality_type }}</h1>
+                                <p class="lead">Confidence: {{ confidence }}%</p>
+                            </div>
+
+                            <h4>Description:</h4>
+                            <p class="mb-4">{{ description }}</p>
+
+                            <h4>Dimensional Breakdown:</h4>
+                            <div class="row mb-4">
+                                <div class="col-md-6">
+                                    <div class="card mb-3">
+                                        <div class="card-body">
+                                            <h5>Extraversion (E) vs. Introversion (I)</h5>
+                                            <div class="progress">
+                                                <div class="progress-bar bg-primary" role="progressbar"
+                                                    style="width: {{ dimensions.E }}%"
+                                                    aria-valuenow="{{ dimensions.E }}"
+                                                    aria-valuemin="0" aria-valuemax="100">
+                                                    E: {{ dimensions.E }}%
+                                                </div>
+                                                <div class="progress-bar bg-info" role="progressbar"
+                                                    style="width: {{ dimensions.I }}%"
+                                                    aria-valuenow="{{ dimensions.I }}"
+                                                    aria-valuemin="0" aria-valuemax="100">
+                                                    I: {{ dimensions.I }}%
+                                                </div>
                                             </div>
-                                            <div class="progress-bar bg-info" role="progressbar" 
-                                                 style="width: {{ dimensions.I }}%" 
-                                                 aria-valuenow="{{ dimensions.I }}" 
-                                                 aria-valuemin="0" aria-valuemax="100">
-                                                I: {{ dimensions.I }}%
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="card mb-3">
+                                        <div class="card-body">
+                                            <h5>Sensing (S) vs. Intuition (N)</h5>
+                                            <div class="progress">
+                                                <div class="progress-bar bg-success" role="progressbar"
+                                                    style="width: {{ dimensions.S }}%"
+                                                    aria-valuenow="{{ dimensions.S }}"
+                                                    aria-valuemin="0" aria-valuemax="100">
+                                                    S: {{ dimensions.S }}%
+                                                </div>
+                                                <div class="progress-bar bg-warning" role="progressbar"
+                                                    style="width: {{ dimensions.N }}%"
+                                                    aria-valuenow="{{ dimensions.N }}"
+                                                    aria-valuemin="0" aria-valuemax="100">
+                                                    N: {{ dimensions.N }}%
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="card mb-3">
+                                        <div class="card-body">
+                                            <h5>Thinking (T) vs. Feeling (F)</h5>
+                                            <div class="progress">
+                                                <div class="progress-bar bg-danger" role="progressbar"
+                                                    style="width: {{ dimensions.T }}%"
+                                                    aria-valuenow="{{ dimensions.T }}"
+                                                    aria-valuemin="0" aria-valuemax="100">
+                                                    T: {{ dimensions.T }}%
+                                                </div>
+                                                <div class="progress-bar bg-light text-dark" role="progressbar"
+                                                    style="width: {{ dimensions.F }}%"
+                                                    aria-valuenow="{{ dimensions.F }}"
+                                                    aria-valuemin="0" aria-valuemax="100">
+                                                    F: {{ dimensions.F }}%
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="card mb-3">
+                                        <div class="card-body">
+                                            <h5>Judging (J) vs. Perceiving (P)</h5>
+                                            <div class="progress">
+                                                <div class="progress-bar bg-dark" role="progressbar"
+                                                    style="width: {{ dimensions.J }}%"
+                                                    aria-valuenow="{{ dimensions.J }}"
+                                                    aria-valuemin="0" aria-valuemax="100">
+                                                    J: {{ dimensions.J }}%
+                                                </div>
+                                                <div class="progress-bar bg-secondary" role="progressbar"
+                                                    style="width: {{ dimensions.P }}%"
+                                                    aria-valuenow="{{ dimensions.P }}"
+                                                    aria-valuemin="0" aria-valuemax="100">
+                                                    P: {{ dimensions.P }}%
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-6">
-                                <div class="card mb-3">
-                                    <div class="card-body">
-                                        <h5>Sensing (S) vs. Intuition (N)</h5>
-                                        <div class="progress">
-                                            <div class="progress-bar bg-success" role="progressbar" 
-                                                 style="width: {{ dimensions.S }}%" 
-                                                 aria-valuenow="{{ dimensions.S }}" 
-                                                 aria-valuemin="0" aria-valuemax="100">
-                                                S: {{ dimensions.S }}%
-                                            </div>
-                                            <div class="progress-bar bg-warning" role="progressbar" 
-                                                 style="width: {{ dimensions.N }}%" 
-                                                 aria-valuenow="{{ dimensions.N }}" 
-                                                 aria-valuemin="0" aria-valuemax="100">
-                                                N: {{ dimensions.N }}%
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
+
+                            <h4>Final Probabilities for All Types:</h4>
+                            <ul class="list-group mb-4">
+                                {% for type, prob in sorted_types %}
+                                <li class="list-group-item d-flex justify-content-between align-items-center">
+                                    {{ type }}
+                                    <span class="badge {% if loop.first %}bg-success{% else %}bg-primary{% endif %} rounded-pill">{{ prob }}%</span>
+                                </li>
+                                {% endfor %}
+                            </ul>
+
+                            <script>
+                            function printPage() {
+                                const belowDiv = document.getElementById("tools");
+                                belowDivCp = belowDiv.innerHTML;
+                                belowDiv.innerHTML = "";
+                                window.print()
+                            }
+                            </script>
+
+                            <div class="text-center" id="tools">
+                                <a href="{{ url_for('reset') }}" class="btn btn-primary">Take Test Again</a>
+                                <button onclick="printPage();" class="btn btn-secondary">Print as PDF</button>
                             </div>
-                            <div class="col-md-6">
-                                <div class="card mb-3">
-                                    <div class="card-body">
-                                        <h5>Thinking (T) vs. Feeling (F)</h5>
-                                        <div class="progress">
-                                            <div class="progress-bar bg-danger" role="progressbar" 
-                                                 style="width: {{ dimensions.T }}%" 
-                                                 aria-valuenow="{{ dimensions.T }}" 
-                                                 aria-valuemin="0" aria-valuemax="100">
-                                                T: {{ dimensions.T }}%
-                                            </div>
-                                            <div class="progress-bar bg-light text-dark" role="progressbar" 
-                                                 style="width: {{ dimensions.F }}%" 
-                                                 aria-valuenow="{{ dimensions.F }}" 
-                                                 aria-valuemin="0" aria-valuemax="100">
-                                                F: {{ dimensions.F }}%
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="card mb-3">
-                                    <div class="card-body">
-                                        <h5>Judging (J) vs. Perceiving (P)</h5>
-                                        <div class="progress">
-                                            <div class="progress-bar bg-dark" role="progressbar" 
-                                                 style="width: {{ dimensions.J }}%" 
-                                                 aria-valuenow="{{ dimensions.J }}" 
-                                                 aria-valuemin="0" aria-valuemax="100">
-                                                J: {{ dimensions.J }}%
-                                            </div>
-                                            <div class="progress-bar bg-secondary" role="progressbar" 
-                                                 style="width: {{ dimensions.P }}%" 
-                                                 aria-valuenow="{{ dimensions.P }}" 
-                                                 aria-valuemin="0" aria-valuemax="100">
-                                                P: {{ dimensions.P }}%
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        
-                        <h4>Final Probabilities for All Types:</h4>
-                        <ul class="list-group mb-4">
-                            {% for type, prob in sorted_types %}
-                            <li class="list-group-item d-flex justify-content-between align-items-center">
-                                {{ type }}
-                                <span class="badge {% if loop.first %}bg-success{% else %}bg-primary{% endif %} rounded-pill">{{ prob }}%</span>
-                            </li>
-                            {% endfor %}
-                        </ul>
-                        
-                        <div class="text-center">
-                            <a href="{{ url_for('reset') }}" class="btn btn-primary">Take Test Again</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-</body>
+    </body>
 </html>
