chore: little change on data_fetcher and results.html

--- a/templates/results.html
+++ b/templates/results.html
@@ -125,7 +125,8 @@
                                 const belowDiv = document.getElementById("tools");
                                 belowDivCp = belowDiv.innerHTML;
                                 belowDiv.innerHTML = "";
-                                window.print()
+                                window.print();
+                                belowDiv.innerHTML = belowDivCp;
                             }
                             </script>
 
