--- a/templates/index.html
+++ b/templates/index.html
@@ -20,11 +20,10 @@
                     <form action="{{ url_for('test') }}" method="get">
                         <label>Nama:</label>
                         <br>
-                        <input type="text" name="name" class="w-100 p-2 m-1" required>
-                        <br>
+                        <input type="text" name="name" class="w-100 p-2 m-1 form-control" required>
                         <label>Email:</label>
                         <br>
-                        <input type="email" name="email" class="w-100 p-2 m-1" required>
+                        <input type="email" name="email" class="w-100 p-2 m-1 form-control" required>
                         <label>No Telp:</label>
                         <br>
                         <input type="text" name="telp" class="w-100 p-2 m-1 form-control" required id="telp">
