fix: display number

--- a/templates/results.html
+++ b/templates/results.html
@@ -15,6 +15,7 @@
                         <div class="card-body">
                             <div class="text-center mb-4">
                                 <p class="sublead mb-0 pb-0 text-secondary">email : <a href="mailto:{{ user_email }}">{{ user_email }}</a></p>
+                                <p class="sublead mb-0 pb-0 text-secondary">No Telp :{{ user_telp }}</p>
                                 <h1 class="display-1">{{ personality_type }}</h1>
                                 <p class="lead">Confidence: {{ confidence }}%</p>
                             </div>
