fix: fixing some stuff and more.
- add back personality desc with indonesian and more simple.
- only calculate the decision tree of top3 mbti type.
- generate the pkl file.

--- a/templates/results.html
+++ b/templates/results.html
@@ -21,6 +21,9 @@
                             </div>
 
                             <h4>Description:</h4>
+                            <p class="mb-4">{{ description2 }}</p>
+
+                            <h4>Job prediction:</h4>
                             <p class="mb-4">{{ description }}</p>
 
                             <h4>Dimensional Breakdown:</h4>
