chore: use new source off question and some small ui adjust.

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,12 +14,11 @@
   </head>
   <body>
     <div class="container mt-5">
-      <header>
-        <h1>Tes Kepribadian MBTI Bayesian</h1>
-      </header>
       <main>
         <div class="card p-4">
-          <h4 class="fw-bold">Tes MBTI untuk pekerjaan informatika - v 0.1</h4>
+          <h4 class="fw-bold">Tes MBTI - v 0.1</h4>
+          <hr>
+          <br/>
           <form action="{{ url_for('test') }}" method="get">
             <label>Nama:</label>
             <br />
