--- a/templates/results.html
+++ b/templates/results.html
@@ -8,13 +8,13 @@
     />
   </head>
   <body>
-    <div class="container mt-5">
+    <div class="container mt-5 mb-5">
       <div class="row justify-content-center">
         <div class="col-md-8">
           <div class="card">
             <div class="card-header bg-success text-white">
               <h2 class="text-center">
-                {{ user_name }} | Tipe Kepribadian MBTI
+                Tipe Kepribadian MBTI {{ user_name }} 
               </h2>
             </div>
             <div class="card-body">
