--- a/templates/test.html
+++ b/templates/test.html
@@ -14,17 +14,17 @@
   </head>
   <body>
     <div class="container d-flex align-items-center h-100 justify-content-center">
-      <div class="row justify-content-center">
-        <div class="col-md-9 d-flex justify-content-center">
-          <div class="card" style="min-width:80%; max-width: 80%;">
+      <div class="row justify-content-center w-100" style="height: 50%;">
+        <div class="col-md-9 d-flex justify-content-center w-100">
+          <div class="card" style="min-width:80% !important; max-width: 80% !important; width: 80% !important; height: 100%; !important">
             <div class="card-header bg-primary text-white">
-              <h3>Pertanyaan {{ question_num }} dari {{ total_questions }}</h3>
+              <h3 class="m-1">Pertanyaan {{ question_num }} dari {{ total_questions }}</h3>
             </div>
-            <div class="card-body">
-              <h4 class="mb-4">{{ question }}</h4>
-              <form action="{{ url_for('test') }}" method="post">
-                <div class="mb-3 d-flex justify-content-center">
-                  <div class="form-check form-check-inline">
+            <div class="card-body align-items-center d-flex flex-column">
+              <h4 class="mb-5">{{ question }}</h4>
+              <form action="{{ url_for('test') }}" method="post" class="mt-auto">
+                  <div class="mb-3 d-flex flex-wrap justify-content-center">
+                  <div class="m-2 form-check form-check-inline">
                     <input
                       class="form-check-input"
                       type="radio"
@@ -37,7 +37,7 @@
                       >Sangat Tidak Setuju</label
                     >
                   </div>
-                  <div class="form-check form-check-inline">
+                  <div class="m-2 form-check form-check-inline">
                     <input
                       class="form-check-input"
                       type="radio"
@@ -49,7 +49,7 @@
                       >Tidak Setuju</label
                     >
                   </div>
-                  <div class="form-check form-check-inline">
+                  <div class="m-2 form-check form-check-inline">
                     <input
                       class="form-check-input"
                       type="radio"
@@ -59,7 +59,7 @@
                     />
                     <label class="form-check-label" for="answer3">Netral</label>
                   </div>
-                  <div class="form-check form-check-inline">
+                  <div class="m-2 form-check form-check-inline">
                     <input
                       class="form-check-input"
                       type="radio"
@@ -69,7 +69,7 @@
                     />
                     <label class="form-check-label" for="answer4">Setuju</label>
                   </div>
-                  <div class="form-check form-check-inline">
+                  <div class="m-2 form-check form-check-inline">
                     <input
                       class="form-check-input"
                       type="radio"
