fix: more ui update

--- a/templates/test.html
+++ b/templates/test.html
@@ -17,7 +17,8 @@
       <div class="row justify-content-center w-100" style="height: 50%;">
         <div class="col-md-9 d-flex justify-content-center w-100">
           <div class="card" style="min-width:80% !important; max-width: 80% !important; width: 80% !important; height: 100%; !important">
-            <div class="card-header bg-primary text-white">
+            <div class="card-header bg-primary text-white d-flex align-items-center justify-content-between">
+              <img src="../static/test.png" width="64"/>
               <h3 class="m-1">Pertanyaan {{ question_num }} dari {{ total_questions }}</h3>
             </div>
             <div class="card-body align-items-center d-flex flex-column">
