--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,10 @@
     <div class="container mt-5">
       <main>
         <div class="card p-4">
-          <h4 class="fw-bold">Tes MBTI - v 0.1</h4>
+                    <div class="d-flex align-items-center">
+                        <img src="../static/test.png" width="64" style="filter: invert(1)"/>
+                        <h4 class="fw-bold m-0">App v 0.1</h4>
+                    </div>
           <hr>
           <br/>
           <form action="{{ url_for('test') }}" method="get">
