--- a/templates/results.html
+++ b/templates/results.html
@@ -6,6 +6,14 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
     />
+        <style>
+        .grad-me {
+            background: #121FCF;
+            background: linear-gradient(to right, #121FCF 0%, #CF1512 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+        </style>
   </head>
   <body>
     <div class="container mt-5 mb-5">
@@ -25,17 +33,17 @@
                 <p class="sublead mb-0 pb-0 text-secondary">
                   No Telp : {{ user_telp }}
                 </p>
-                <h1 class="display-1 fw-bold">{{ personality_type }}</h1>
+                <h1 class="display-1 fw-bold grad-me">{{ personality_type }}</h1>
                 <p class="lead">Confidence: {{ confidence }}%</p>
               </div>
 
               <h4>Deskripsi:</h4>
               <p class="mb-4">{{ description2 }}</p>
 
-              <h4>Prediksi pekerjaan:</h4>
+              <h4>Pekerjaan yang cocok:</h4>
               <p class="mb-4">{{ description }}</p>
 
-              <h4>Analisis Dimensional:</h4>
+              <h4>Analisis:</h4>
               <div class="row mb-4">
                 <div class="col-md-6">
                   <div class="card mb-3">
