fix: changed the word neutral and translate the jobs to indonesian.

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
         <div class="card p-4">
                     <div class="d-flex align-items-center">
                         <img src="../static/test.png" width="64" style="filter: invert(1)"/>
-                        <h4 class="fw-bold m-0">App v 0.1</h4>
+                        <h4 class="fw-bold m-0">App V 1.0</h4>
                     </div>
           <hr>
           <br/>
