--- a/templates/test.html
+++ b/templates/test.html
@@ -58,7 +58,7 @@
                       id="answer3"
                       value="3"
                     />
-                    <label class="form-check-label" for="answer3">Netral</label>
+                    <label class="form-check-label" for="answer3">Biasa saja</label>
                   </div>
                   <div class="m-2 form-check form-check-inline">
                     <input
