--- a/templates/test.html
+++ b/templates/test.html
@@ -50,16 +50,16 @@
                       >Tidak Setuju</label
                     >
                   </div>
-                  <div class="m-2 form-check form-check-inline">
-                    <input
-                      class="form-check-input"
-                      type="radio"
-                      name="answer"
-                      id="answer3"
-                      value="3"
-                    />
-                    <label class="form-check-label" for="answer3">Biasa saja</label>
-                  </div>
+                  <!-- <div class="m-2 form-check form-check-inline"> -->
+                  <!--   <input -->
+                  <!--     class="form-check-input" -->
+                  <!--     type="radio" -->
+                  <!--     name="answer" -->
+                  <!--     id="answer3" -->
+                  <!--     value="3" -->
+                  <!--   /> -->
+                  <!--   <label class="form-check-label" for="answer3">Biasa saja</label> -->
+                  <!-- </div> -->
                   <div class="m-2 form-check form-check-inline">
                     <input
                       class="form-check-input"
