chore: change again to the result_job to pick more diverse jobs

--- a/templates/results.html
+++ b/templates/results.html
@@ -163,7 +163,7 @@
                 </div>
               </div>
 
-              <h4>Probabilitas Final untuk Semua Jenis:</h4>
+              <h4>Probabilitas Final Top 5:</h4>
               <ul class="list-group mb-4">
                 {% for type, prob in sorted_types %}
                 <li
